src/objects/GoogleDriveConnectorType__c.object
<CustomObject>
    <description>This object stores the configuration used in requesting and storing Google client ID credentials.</description>
    <fields>
        <fullName>AuthorizationEndpoint__c</fullName>
        <label>Authorization Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallbackURL__c</fullName>
        <label>Callback URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtraUrlParameters__c</fullName>
        <label>Extra URL Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RedirectUri__c</fullName>
        <label>Redirect URI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TokenEndpoint__c</fullName>
        <label>Token Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Google Drive Connector Type</label>
    <nameField>
        <label>Google Drive Connector Type	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Drive Connector Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>